[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/HUD.gd" id=1]

[node name="HUD" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Stats" type="VBoxContainer" parent="."]
offset_left = 24.0
offset_top = 24.0
offset_right = 420.0
offset_bottom = 300.0

[node name="FuelLabel" type="Label" parent="Stats"]
text = "Fuel: 0/0"

[node name="DurabilityLabel" type="Label" parent="Stats"]
text = "Durability: 0/0"

[node name="DistanceLabel" type="Label" parent="Stats"]
text = "Distance: 0.0 km"

[node name="TimeLabel" type="Label" parent="Stats"]
text = "Time: 0.0 s"

[node name="SpeedLabel" type="Label" parent="Stats"]
text = "Speed: 0"

[node name="BestLabel" type="Label" parent="Stats"]
text = "Best: 0.0 km / 0.0 s"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -180.0
offset_right = 240.0
offset_bottom = 180.0

[node name="VBox" type="VBoxContainer" parent="GameOverPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Title" type="Label" parent="GameOverPanel/VBox"]
text = "Run Ended"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBox"]
text = "Restart"

[node name="MenuButton" type="Button" parent="GameOverPanel/VBox"]
text = "Main Menu"
